[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2.1"
actix-web = "3.3.2"
anyhow = "1.0.51"
block_pool = "0.1.2"
derive_more = "0.99.17"
log = "0.4.14"
native-tls = "0.2.8"
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5.0"
ramhorns = "0.14.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
simple_logger = "2.1.0"
structopt = "0.3.25"
shared_lru = { version = "0.1.5", features = ["serde_json"] }
actix-web-middleware-redirect-scheme = "3.0.0"
actix-files = "0.5"
rand = "0.8.5"
bs58 = "0.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
lazy_static = "1.4.0"

parity-scale-codec = "*"
sp-core = "3.0.0"
substrate-api-client = "0.6.6"
web3 = "0.18.0"
tokio = "1.21.1"


[[bin]]
name = "fractal_explorer_web"
path = "src/bin/web.rs"

[[bin]]
name = "fractal_explorer_index"
path = "src/bin/index.rs"
