[package]
authors = ['Shelby Doolittle']
build = 'build.rs'
description = "Fractal protocol's blockchain node."
edition = '2018'
homepage = 'https://trustfractal.io'
license = 'MIT'
name = 'fractal-protocol-blockchain-node'
repository = 'https://github.com/trustfractal/protocol/'
version = '0.1.0'

[[bin]]
name = 'node'
path = 'src/main.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# Substrate dependencies
frame-benchmarking = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-benchmarking-cli = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-transaction-payment-rpc = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-basic-authorship = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-cli = {features = ['wasmtime'], version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-client-api = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-consensus = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-consensus-aura = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-executor = {features = ['wasmtime'], version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-finality-grandpa = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-keystore = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-rpc = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-rpc-api = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-service = {features = ['wasmtime'], version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-telemetry = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sc-transaction-pool = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-api = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-block-builder = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-blockchain = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-consensus = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-consensus-aura = {version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-core = {version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-finality-grandpa = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-inherents = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-runtime = {version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-transaction-pool = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
substrate-frame-rpc-system = {version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

fractal-protocol-blockchain-runtime = { path = '../runtime' }
hex-literal = "0.3.3"

[features]
default = []
runtime-benchmarks = []
