[package]
authors = ['Shelby Doolittle']
edition = '2018'
homepage = 'https://trustfractal.io'
license = 'MIT'
name = 'fractal-protocol-blockchain-runtime'
repository = 'https://github.com/trustfractal/protocol'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder={version = '5.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
hex-literal= {version = '0.3.1'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-executive = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-system-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-system-rpc-runtime-api = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-aura = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-balances = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-grandpa = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-randomness-collective-flip = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-sudo = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-timestamp = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-transaction-payment = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-utility = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-api = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-block-builder = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-consensus-aura = {default-features = false, version = '0.10.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-core = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-inherents = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-offchain = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-runtime = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-session = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-std = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-transaction-pool = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-version = {default-features = false, version = '5.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

fractal-data-capture = { default-features = false, path = '../pallets/data_capture' }
fractal-staking = { default-features = false, path = '../pallets/staking' }
fractal-token-distribution = { default-features = false, path = '../pallets/token_distribution' }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-utility/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
]
std = [
	'codec/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-aura/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'fractal-data-capture/std',
	'fractal-token-distribution/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-utility/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
]
