[package]
name = "node-health-check"
version = "0.1.0"
edition = "2018"
authors = ["Boy Maas <boy.maas@gmail.com>", "Antoni Dikov <antoni@fractal.id>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
serde = "1.0.130"
structopt = "0.3.23"
# TODO: figure out specific features of tokio
tokio = { version =  "1.12.0", features = ["full"]}
warp = "0.3.1"
