[package]
authors = ['Antoni Dikov <antoni@fractal.id>']
description = "FRAME pallet for Fractal's data storage."
edition = '2021'
homepage = 'https://trustfractal.com'
license = 'MIT'
name = 'fractal-facts'
repository = 'https://github.com/trustfractal/protocol/'
version = '0.1.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
num-traits = {default-features = false, version = '0.2.14'}
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[features]
default = ['std']
std = [
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-io/std",
    'num-traits/std',
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ['frame-support/try-runtime']


[[bin]]
name = 'facts_init'
