[package]
authors = ['Shelby Doolittle <shelby@fractal.id>']
description = "FRAME pallet for Fractal's minting logic."
edition = '2018'
homepage = 'https://trustfractal.com'
license = 'MIT'
name = 'fractal-minting'
repository = 'https://github.com/trustfractal/protocol/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
merklex = {default-features = false, path = '../../../support/merklex'}
blake2 = {default-features = false, version = "0.9"}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
serde = '1.0.119'
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
pallet-balances = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
  'blake2/std',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'merklex/std',
  'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']

[[bin]]
name = 'plot_issuance'
