[package]
authors = ['Shelby Doolittle <shelby@fractal.id>']
description = "FRAME pallet for Fractal's data capture logic."
edition = '2018'
homepage = 'https://trustfractal.com'
license = 'MIT'
name = 'fractal-staking'
repository = 'https://github.com/trustfractal/protocol/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
num-bigint = {default-features = false, version = "0.4.3"}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-arithmetic = {default-features = false, version = '5.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-core = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-runtime = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

pallet-balances = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08' }

[dev-dependencies]
maplit = "1.0.2"
serde = '1.0.119'
sp-io = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'num-bigint/std',
  'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']
