[package]
authors = ['Shelby Doolittle <shelby@fractal.id>']
description = "FRAME pallet for Fractal's token distribution logic."
edition = '2018'
homepage = 'https://trustfractal.com'
license = 'MIT'
name = 'fractal-token-distribution'
repository = 'https://github.com/trustfractal/protocol/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
num-traits = {default-features = false, version = '0.2.14'}
libm = {version = '0.2.1'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-core = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
sp-runtime = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}

[dev-dependencies]
sp-io = {default-features = false, version = '6.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08'}
pallet-balances = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08' }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'num-traits/std',
  'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']

[[bin]]
name = 'plot_issuance'
